signup: add users table migrations and backend /signup with bcrypt; improve duplicate detection (SQLSTATE 23505) and email validation; frontend: top nav + Sign Up modal with centered chat layout; dev: Vite proxy /signup; docs: update .windsurf_plan.md

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -76,6 +76,13 @@ The agent hangs when started with 'air' but works with 'go run'. Added detailed 
 ## Current Goal
 Add Jira tools for transitioning issues: list available transitions and perform a transition, wired into the agent tool system. Then test multi-step flows (get transitions -> transition issue).
 
+## Signup Flow + Top Navigation (2025-08-12)
+- DB: Added `migrations/0005_users.up.sql` and `.down.sql` creating `users` table with columns `id BIGSERIAL`, `username TEXT UNIQUE` (email), `name TEXT`, `password_hash TEXT`, `created_at`, `updated_at`.
+- Backend: Implemented `POST /signup` in `agent.go` that validates inputs, lightly checks email format, enforces min password length, hashes password with bcrypt, and inserts the user (conflict returns 409).
+- Frontend: Updated `web/src/App.tsx` to add a top nav (brand + "Sign Up"/"Log In" actions). Implemented a Sign Up modal posting to `/signup`. Added accompanying styles in `web/src/app.css`.
+- Build: `go build ./...` passes. Marked configured to synchronous parse to fix TS type.
+- Next: Add login/session auth (cookies), password reset, and email verification.
+
 ## Changes on 2025-08-08
 - Refactored tools to be modular with dynamic discovery/dispatch:
   - Introduced a registry-based dispatcher in `tools/toolserver.go` using `toolExecutors` and `tools` maps.
