web: extract LoginModal and SignupModal components; simplify App.tsx\n\n- Create components/LoginModal.tsx and components/SignupModal.tsx owning their form state and network calls.\n- Import and use them in App.tsx; remove inline modal JSX and related state.\n- Update .windsurf_plan.md with refactor notes.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -97,6 +97,13 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - Build: `go build ./...` passes.
 - Notes: This is a simple cookie-HMAC session; consider CSRF tokens for state-changing endpoints and secure cookie attributes in production.
 
+## Frontend Refactor (2025-08-13)
+- Extracted modal UIs from `web/src/App.tsx` into dedicated components:
+  - `web/src/components/LoginModal.tsx`
+  - `web/src/components/SignupModal.tsx`
+- `App.tsx` now only controls visibility and session `me` state; each modal owns its form state and network calls.
+- Benefit: Smaller `App.tsx`, clearer separation of concerns, easier testing and maintenance.
+
 ## Changes on 2025-08-08
 - Refactored tools to be modular with dynamic discovery/dispatch:
   - Introduced a registry-based dispatcher in `tools/toolserver.go` using `toolExecutors` and `tools` maps.
