frontend(auth): improve type safety in Login/Signup modals by replacing any with typed responses; update .windsurf_plan.md to document change

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -104,6 +104,14 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - `App.tsx` now only controls visibility and session `me` state; each modal owns its form state and network calls.
 - Benefit: Smaller `App.tsx`, clearer separation of concerns, easier testing and maintenance.
 
+## Auth modals type-safety (2025-08-13)
+- File: `web/src/components/LoginModal.tsx`
+  - Added `LoginSuccess` and `LoginError` types.
+  - Parse `res.json()` as `unknown` then assert specific shapes; removed `any` casts.
+- File: `web/src/components/SignupModal.tsx`
+  - Added `SignupError` type and replaced `any` with typed assertions.
+  - Behavior unchanged; improved compile-time safety and readability.
+
 ## Changes on 2025-08-08
 - Refactored tools to be modular with dynamic discovery/dispatch:
   - Introduced a registry-based dispatcher in `tools/toolserver.go` using `toolExecutors` and `tools` maps.
