--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -576,4 +576,5 @@ Next:
   - Fixed linter warning in `getOrCreateAnyThread()` by simplifying the error check after `Scan`: `if err != sql.ErrNoRows { return 0, err }`.
 - Frontend type-safety:
   - In both login and signup modals, replaced `catch (err: any)` with `catch (err: unknown)` and safe message extraction using `err instanceof Error ? err.message : String(err)`.
+  - In `web/src/App.tsx`, treat `/me` response JSON as `unknown` and type-check before casting when setting `me` state.
 - Build status: `go build ./...` passes.
