auth: DRY secure-cookie check via isSecureRequest(); frontend: let JSON parse errors bubble in Login/Signup modals; App: add User type + isUser type guard for /me load; update .windsurf_plan.md

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -112,6 +112,16 @@ Add Jira tools for transitioning issues: list available transitions and perform 
   - Added `SignupError` type and replaced `any` with typed assertions.
   - Behavior unchanged; improved compile-time safety and readability.
 
+## Security + Robustness (2025-08-13)
+- Backend (`agent.go`):
+  - DRY refactor: extracted `isSecureRequest(c *gin.Context) bool` and used it in both `setSessionCookie()` and `clearSessionCookie()` to consistently set `cookie.Secure` when TLS or `X-Forwarded-Proto=https`.
+  - Note: centralizing this logic eases future proxy/trusted-proxy adjustments.
+- Frontend:
+  - `web/src/components/LoginModal.tsx`: Removed `.catch(() => ({}))` around `res.json()` so malformed JSON surfaces to the outer try/catch, preventing silent failures.
+  - `web/src/components/SignupModal.tsx`: Same fix as Login modal for consistent error propagation.
+  - `web/src/App.tsx`: Introduced `User` type and `isUser(o): o is User` type guard; simplified `/me` loader check and updated `me` state to `User | null`.
+  - Benefit: safer runtime checks, cleaner code, and fewer brittle `any` casts.
+
 ## Changes on 2025-08-08
 - Refactored tools to be modular with dynamic discovery/dispatch:
   - Introduced a registry-based dispatcher in `tools/toolserver.go` using `toolExecutors` and `tools` maps.
