Frontend: validate login response shape in LoginModal to prevent unsafe type assertions; improve error handling. Update plan documenting the change.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -587,4 +587,8 @@ Next:
 - Frontend type-safety:
   - In both login and signup modals, replaced `catch (err: any)` with `catch (err: unknown)` and safe message extraction using `err instanceof Error ? err.message : String(err)`.
   - In `web/src/App.tsx`, treat `/me` response JSON as `unknown` and type-check before casting when setting `me` state.
-- Build status: `go build ./...` passes.
+  - In `web/src/components/LoginModal.tsx`, validate the JSON shape for successful `/login` responses before invoking `onSuccess`:
+    - Ensure `data.user` exists and has `{ id: number, username: string, name: string }`.
+    - For non-OK responses, safely read `(data as any).error` when available; otherwise fall back to `HTTP <status>` message.
+    - Prevents passing `undefined` to `onSuccess` and improves robustness to unexpected API responses.
+  - Build status: `go build ./...` passes.
