Auth: mitigate username-enumeration timing in /login by performing dummy bcrypt compare on user-not-found; document in plan.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -584,6 +584,7 @@ Next:
   - `parseSession()` now decodes the cookie signature with `hex.DecodeString` and compares raw bytes via `hmac.Equal(sigBytes, expectedMAC)`. Previously compared hex strings; this is more robust and validates signature format.
   - Simplified ephemeral `SESSION_SECRET` generation by removing redundant `else` after `log.Fatalf`; code after `if` runs only on success.
   - Fixed linter warning in `getOrCreateAnyThread()` by simplifying the error check after `Scan`: `if err != sql.ErrNoRows { return 0, err }`.
+  - `/login`: Mitigate username-enumeration timing attacks by performing a dummy bcrypt comparison when the user is not found. Implemented helper `dummyBcryptCompare(password)` that hashes a dummy password once at startup and calls `bcrypt.CompareHashAndPassword` to normalize timing.
 - Frontend type-safety:
   - In both login and signup modals, replaced `catch (err: any)` with `catch (err: unknown)` and safe message extraction using `err instanceof Error ? err.message : String(err)`.
   - In `web/src/App.tsx`, treat `/me` response JSON as `unknown` and type-check before casting when setting `me` state.
