Frontend: extract shared User/LoginSuccess types and guards to web/src/types.ts; refactor App.tsx and LoginModal.tsx to use isUser/isLoginSuccess and remove duplicate/verbose checks.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -592,4 +592,7 @@ Next:
     - Ensure `data.user` exists and has `{ id: number, username: string, name: string }`.
     - For non-OK responses, safely read `(data as any).error` when available; otherwise fall back to `HTTP <status>` message.
     - Prevents passing `undefined` to `onSuccess` and improves robustness to unexpected API responses.
+  - Frontend shared types:
+    - Introduced `web/src/types.ts` exporting `User`, `LoginSuccess`, and guards `isUser`, `isLoginSuccess`.
+    - Updated `web/src/App.tsx` and `web/src/components/LoginModal.tsx` to import and use these, removing duplicated `User` type and verbose inline checks.
   - Build status: `go build ./...` passes.
