security(auth): fail-fast dummy bcrypt hash; optimize login cleanup; simplify LoginModal error handling
- agent.go: dummyBcryptCompare now log.Fatalf on bcrypt dummy hash generation failure; removed sleep fallback; always perform CompareHashAndPassword.
- agent.go: loginRateLimiter.cleanup uses snapshot/rebuild/swap to minimize mutex hold time and reduce contention under load.
- web/src/components/LoginModal.tsx: use LoginError with nullish coalescing for consistent, simpler error messaging.
- docs: update .windsurf_plan.md with entries for security hardening and cleanup optimization.

Build: go build ./... passes.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -122,6 +122,18 @@ Add Jira tools for transitioning issues: list available transitions and perform 
   - `web/src/App.tsx`: Introduced `User` type and `isUser(o): o is User` type guard; simplified `/me` loader check and updated `me` state to `User | null`.
   - Benefit: safer runtime checks, cleaner code, and fewer brittle `any` casts.
 
+### Bcrypt timing mitigation hardening (2025-08-13)
+- File: `agent.go` (`dummyBcryptCompare`)
+- Change: Removed sleep-based fallback and now fail fast with `log.Fatalf` if `bcrypt.GenerateFromPassword(...)` for the dummy hash ever fails. The dummy hash is generated once at startup (via `sync.Once`) and subsequent calls always perform `CompareHashAndPassword` against the dummy.
+- Reason: Avoids observable timing discrepancies between "user not found" and "wrong password" when dummy hash generation fails; ensures the app never runs in a degraded security posture.
+- Result: Consistent constant-time-ish behavior for auth failure paths and simpler logic.
+
+### Login rate limiter cleanup optimization (2025-08-13)
+- File: `agent.go` (`loginRateLimiter.cleanup`)
+- Change: Replaced in-place deletions under a long-held mutex with a copy-and-swap approach. We snapshot maps under lock, rebuild filtered maps without holding the lock, then swap under lock.
+- Reason: Minimizes mutex hold time during cleanup when maps are large, reducing contention with `/login` requests.
+- Result: Better scalability and lower latency during periodic cleanup.
+
 ## Changes on 2025-08-08
 - Refactored tools to be modular with dynamic discovery/dispatch:
   - Introduced a registry-based dispatcher in `tools/toolserver.go` using `toolExecutors` and `tools` maps.
