--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -122,6 +122,11 @@ Add Jira tools for transitioning issues: list available transitions and perform 
   - `web/src/App.tsx`: Introduced `User` type and `isUser(o): o is User` type guard; simplified `/me` loader check and updated `me` state to `User | null`.
   - Benefit: safer runtime checks, cleaner code, and fewer brittle `any` casts.
 
+### Login timing-attack comment clarification (2025-08-13)
+- File: `agent.go` (`POST /login` handler, non-existent user branch)
+- Change: Expanded the inline comment above `dummyBcryptCompare(p)` to explicitly state it mitigates username-enumeration timing attacks by performing a dummy bcrypt comparison when the user is not found.
+- Reason: Improve maintainability and security clarity for future reviewers; behavior unchanged.
+
 ### Bcrypt timing mitigation hardening (2025-08-13)
 - File: `agent.go` (`dummyBcryptCompare`)
 - Change: Removed sleep-based fallback and now fail fast with `log.Fatalf` if `bcrypt.GenerateFromPassword(...)` for the dummy hash ever fails. The dummy hash is generated once at startup (via `sync.Once`) and subsequent calls always perform `CompareHashAndPassword` against the dummy.
