frontend: pass setMe directly to LoginModal onSuccess; update plan note

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -103,6 +103,7 @@ Add Jira tools for transitioning issues: list available transitions and perform 
   - `web/src/components/SignupModal.tsx`
 - `App.tsx` now only controls visibility and session `me` state; each modal owns its form state and network calls.
 - Benefit: Smaller `App.tsx`, clearer separation of concerns, easier testing and maintenance.
+ - Minor polish: In `web/src/App.tsx`, passed `setMe` directly to `LoginModal` as `onSuccess={setMe}` for conciseness.
 
 ## Auth modals type-safety (2025-08-13)
 - File: `web/src/components/LoginModal.tsx`
