web: strengthen isLoginSuccess type guard by avoiding any, checking non-null object, and typing user as unknown; update .windsurf_plan.md to document the change

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -113,6 +113,11 @@ Add Jira tools for transitioning issues: list available transitions and perform 
   - Added `SignupError` type and replaced `any` with typed assertions.
   - Behavior unchanged; improved compile-time safety and readability.
 
+### Type guard refinement (2025-08-13)
+- File: `web/src/types.ts`
+  - Refactored `isLoginSuccess(d): d is LoginSuccess` to avoid `any`, ensure `d` is a non-null object, and pass `user` as `unknown` to `isUser`.
+  - Reason: Improve type-safety and readability while preserving behavior.
+
 ## Security + Robustness (2025-08-13)
 - Backend (`agent.go`):
   - DRY refactor: extracted `isSecureRequest(c *gin.Context) bool` and used it in both `setSessionCookie()` and `clearSessionCookie()` to consistently set `cookie.Secure` when TLS or `X-Forwarded-Proto=https`.
