--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -118,6 +118,11 @@ Add Jira tools for transitioning issues: list available transitions and perform 
   - Refactored `isLoginSuccess(d): d is LoginSuccess` to avoid `any`, ensure `d` is a non-null object, and pass `user` as `unknown` to `isUser`.
   - Reason: Improve type-safety and readability while preserving behavior.
 
+### Login handler cleanup (2025-08-13)
+- File: `agent.go`
+  - Removed redundant empty-username/password check in `POST /login` handler because `binding:"required"` on `loginReq` already rejects empty strings via `c.ShouldBindJSON`.
+  - Reason: Unreachable code; simplifies the handler without changing behavior.
+
 ## Security + Robustness (2025-08-13)
 - Backend (`agent.go`):
   - DRY refactor: extracted `isSecureRequest(c *gin.Context) bool` and used it in both `setSessionCookie()` and `clearSessionCookie()` to consistently set `cookie.Secure` when TLS or `X-Forwarded-Proto=https`.
