feat(auth): fix login rate limiter cleanup concurrency; prune in-place under lock
- Perform single-lock, in-place pruning in loginRateLimiter.cleanup to avoid
  dropping concurrent updates during copy-and-swap
- Remove maps.Clone usage and the maps import
- Update .windsurf_plan.md with reasoning, tradeoffs, and date

This favors correctness over minimal lock time; cleanup is infrequent so the
brief contention is acceptable.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -159,11 +159,11 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - Reason: Avoids observable timing discrepancies between "user not found" and "wrong password" when dummy hash generation fails; ensures the app never runs in a degraded security posture.
 - Result: Consistent constant-time-ish behavior for auth failure paths and simpler logic.
 
-### Login rate limiter cleanup optimization (2025-08-13)
+### Login rate limiter cleanup concurrency fix (2025-08-13)
 - File: `agent.go` (`loginRateLimiter.cleanup`)
-- Change: Replaced in-place deletions under a long-held mutex with a copy-and-swap approach. We snapshot maps under lock, rebuild filtered maps without holding the lock, then swap under lock.
-- Reason: Minimizes mutex hold time during cleanup when maps are large, reducing contention with `/login` requests.
-- Result: Better scalability and lower latency during periodic cleanup.
+- Change: Use single-lock, in-place pruning of stale entries instead of the prior copy-and-swap approach.
+- Reason: Copy-and-swap introduced a race window where concurrent mutations (e.g., `getLimiter`, `recordFailure`, `recordSuccess`) could be lost between unlock/swap, dropping recent limiters or failure states. Cleanup runs infrequently (every ~10m), so brief contention is acceptable to guarantee correctness.
+- Result: Correctness over minimal lock time; avoids losing recent limiter/failure updates during cleanup.
 
 ## Changes on 2025-08-08
 - Refactored tools to be modular with dynamic discovery/dispatch:
