UI: Add Account dropdown in header and move Log out into it; add dropdown styles; update plan (.windsurf_plan.md).\n\n- web/src/App.tsx: Replace inline Log out button with Account menu (user name + caret), toggle state, outside-click & Escape close; menu item triggers existing logout()\n- web/src/app.css: Add .account, .account-btn, .account-menu, .menu-item styles matching theme\n- .windsurf_plan.md: Document UI change

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -15,6 +15,7 @@
 - Added terminal check to prevent hangs in non-interactive environments.
 - Added debug logging for exit condition.
 - Confirmed resolution of hanging issue with 'air' after adding terminal check and debug logging.
+ - UI: Added Account dropdown in the header and moved "Log out" into it. Files updated: `web/src/App.tsx`, `web/src/app.css`.
 
 ## Next Steps
 1. Enhance `agent.go` chat interface for better tool integration.
