accessibility(App): make Account menu heading screen-reader accessible; add hook note; type-safety guard\n\n- Remove aria-hidden from Account section title in account menu so AT can announce context\n- Add comment suggesting extracting outside-click/Escape logic to reusable useOutsideClick hook\n- Guard e.target with instanceof Node before using contains to satisfy strict TS checks\n- Update .windsurf_plan.md with Accessibility + DX (2025-08-14) entry

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -106,6 +106,10 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - Benefit: Smaller `App.tsx`, clearer separation of concerns, easier testing and maintenance.
  - Minor polish: In `web/src/App.tsx`, passed `setMe` directly to `LoginModal` as `onSuccess={setMe}` for conciseness.
 
+## Accessibility + DX (2025-08-14)
+- Frontend (`web/src/App.tsx`): Removed `aria-hidden` from the Account menu section header so screen readers announce "Account" context in the dropdown.
+- Frontend (`web/src/App.tsx`): Added a code comment suggesting extraction of the outside-click/Escape closing logic into a reusable `useOutsideClick` hook for reuse across menus/modals.
+
 ## Auth modals type-safety (2025-08-13)
 - File: `web/src/components/LoginModal.tsx`
   - Added `LoginSuccess` and `LoginError` types.
