Vite: derive server.allowedHosts from ~/.config/go-thing/config.ini ALLOWED_ORIGINS; add dev host; doc in .windsurf_plan.md. Note: install @types/node for Node built-in imports.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -110,6 +110,23 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - Frontend (`web/src/App.tsx`): Removed `aria-hidden` from the Account menu section header so screen readers announce "Account" context in the dropdown.
 - Frontend (`web/src/App.tsx`): Added a code comment suggesting extraction of the outside-click/Escape closing logic into a reusable `useOutsideClick` hook for reuse across menus/modals.
 
+## Slack Home Tab Support (2025-08-14)
+- Backend:
+  - Added Home tab handling for Slack `app_home_opened` events in `agent.go` route `POST /webhook/slack`.
+    - We now unwrap the inner `event` and branch on `type` (`message` vs `app_home_opened`).
+    - For `app_home_opened`, we call `utility.PublishSlackHomeTab(userID)` to publish a Home tab view.
+  - New helpers in `utility/slack.go`:
+    - `BuildSlackHomeView() slack.HomeTabViewRequest` builds a simple Home tab with header, intro, tips, and divider using Block Kit.
+    - `PublishSlackHomeTab(userID string) error` uses `slack-go/slack` `PublishView` with the bot token from INI config (`SLACK_BOT_TOKEN`).
+  - `go build ./...` passes.
+- Slack App configuration required:
+  - Scopes: `chat:write` (existing for messages) and `views:write` (new for Home tab).
+  - Event Subscriptions: enable Events, add `app_home_opened` to Bot Events, and point Request URL to our `/webhook/slack`.
+  - Interactivity not required for this basic Home tab.
+- Notes / Next:
+  - Consider verifying Slack request signatures via `X-Slack-Signature`/`X-Slack-Request-Timestamp` for stronger security on `/webhook/slack`.
+  - Future: personalize the Home tab (recent threads, quick actions) by looking up the Slack user and our conversation DB (`threads`, `messages`).
+
 ## Auth modals type-safety (2025-08-13)
 - File: `web/src/components/LoginModal.tsx`
   - Added `LoginSuccess` and `LoginError` types.
@@ -682,3 +699,9 @@ Next:
 - Config: Set `ALLOWED_ORIGINS=http://localhost:5174,http://127.0.0.1:5174` in `~/.config/go-thing/config.ini` and restarted the server (Air).
 - Verification: Used curl through Vite proxy to fetch a CSRF token and reuse the same cookie jar and token for `/login`. Confirmed 200 OK. The browser login flow now succeeds.
 - Notes: Keep `SameSite=Strict` for `csrf_token`. Always fetch `/csrf` once immediately before the state-changing POST and send `X-CSRF-Token` with `credentials: 'include'` so cookie is attached.
+
+## Frontend Allowed Hosts from Config (2025-08-16)
+- Vite config (`web/vite.config.ts`) now derives `server.allowedHosts` from the same `ALLOWED_ORIGINS` key in `~/.config/go-thing/config.ini`, avoiding hardcoded hostnames. Implementation reads the INI file at build-time and converts origins to hostnames.
+- Added the new dev host `gothing.dev.portnumber53.com` to `ALLOWED_ORIGINS` alongside localhost entries; Vite and backend now accept it. Backend logs confirmed allowlist acceptance.
+- Fallback remains in Vite to the previous static host list if `ALLOWED_ORIGINS` is missing.
+- Developer note: TypeScript may require Node types for `fs`, `os`, `path` in `vite.config.ts`. Install via `npm i -D @types/node` (recommended) and/or add `/// <reference types="node" />` at top of the file.
