updated windsurf plan

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -110,6 +110,12 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - Frontend (`web/src/App.tsx`): Removed `aria-hidden` from the Account menu section header so screen readers announce "Account" context in the dropdown.
 - Frontend (`web/src/App.tsx`): Added a code comment suggesting extraction of the outside-click/Escape closing logic into a reusable `useOutsideClick` hook for reuse across menus/modals.
 
+### Reusable outside-dismiss hook (2025-08-14)
+- Frontend:
+  - Implemented `web/src/hooks/useOutsideDismiss.ts` to handle outside click/tap and Escape-key dismissal with optional focus restore.
+  - Refactored Account menu in `web/src/App.tsx` to use the hook, removing inline document listeners and simplifying the component.
+  - Benefits: better reusability across components, improved accessibility with focus restoration, and reduced code duplication.
+
 ## Slack Home Tab Support (2025-08-14)
 - Backend:
   - Added Home tab handling for Slack `app_home_opened` events in `agent.go` route `POST /webhook/slack`.
