docs(plan): document git history cleanup removing web/node_modules and add collaborator reset instructions

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -711,3 +711,24 @@ Next:
 - Added the new dev host `gothing.dev.portnumber53.com` to `ALLOWED_ORIGINS` alongside localhost entries; Vite and backend now accept it. Backend logs confirmed allowlist acceptance.
 - Fallback remains in Vite to the previous static host list if `ALLOWED_ORIGINS` is missing.
 - Developer note: TypeScript may require Node types for `fs`, `os`, `path` in `vite.config.ts`. Install via `npm i -D @types/node` (recommended) and/or add `/// <reference types="node" />` at top of the file.
+
+## Git History Cleanup: Remove `web/node_modules/` (2025-08-16)
+- Goal: Permanently remove `web/node_modules/` from the entire Git history to reduce repo size and prevent accidental tracking.
+- Ignore status: `web/.gitignore` contains `node_modules/` and `node_modules`, so new files are ignored going forward.
+- Method used: `git filter-branch` (git-filter-repo unavailable).
+- Safety tag created: `backup/pre-node-modules-purge-2025-08-16`.
+- Commands executed (from repo root):
+  - `git tag backup/pre-node-modules-purge-2025-08-16`
+  - `git filter-branch --force --index-filter "git rm -r --cached --ignore-unmatch web/node_modules" --prune-empty --tag-name-filter cat -- --all`
+  - `git for-each-ref --format='%(refname)' refs/original/ | xargs -r -n1 git update-ref -d`
+  - `git reflog expire --expire=now --all && git gc --prune=now --aggressive`
+  - `git push --force --all`
+  - `git push --force --tags`
+- Post-check: Verified no tracked paths remain under `web/node_modules/`.
+- Collaborator instructions after force-push:
+  - Re-clone OR hard reset to the rewritten history:
+    - `git fetch --all`
+    - `git checkout <branch>`
+    - `git reset --hard origin/<branch>`
+  - If you had local work, create a safety branch before resetting: `git branch backup/pre-rewrite-local`.
+  - If you rely on old SHAs, use the backup tag to locate pre-rewrite commits.
