Jira comment tool: auto-convert string body to ADF and surface detailed Jira errors; Temporarily disable current_context in Jira webhook flow; Add DISABLE_CONTEXT/JIRA_DISABLE_CONTEXT flags to Gemini to fully suppress context prompts/merges when debugging; Update plan doc.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -732,3 +732,17 @@ Next:
     - `git reset --hard origin/<branch>`
   - If you had local work, create a safety branch before resetting: `git branch backup/pre-rewrite-local`.
   - If you rely on old SHAs, use the backup tag to locate pre-rewrite commits.
+
+## Jira Webhook Endpoint (2025-08-16)
+- Backend (`agent.go`): Added `POST /webhook/jira` to accept Jira webhooks.
+  - No CSRF (external origin).
+  - Optional shared secret via INI `[default] JIRA_WEBHOOK_TOKEN`; when set, requests must send header `X-Webhook-Token: <token>`.
+  - Reads up to 1MB body, attempts JSON parse. Logs common fields like `webhookEvent`, `issue_event_type_name`, and `issue.key`. Truncates/logs non-JSON safely.
+  - Returns an empty `200 OK` on success.
+- Config: Set `JIRA_WEBHOOK_TOKEN` in `~/.config/go-thing/config.ini` to enforce auth (recommended).
+- Jira Setup: In Jira (Cloud/Data Center), create a Webhook pointing to `http(s)://<host>/webhook/jira`. Add a custom header `X-Webhook-Token: <your_token>` if auth is enabled.
+- Next: Optionally persist events to DB and add signature verification if Jira instance supports it.
+
+### Chat Flow Integration (2025-08-16)
+- The webhook-generated prompt is now injected into the chat flow as a user message, then processed by the AI (Gemini) and stored as an assistant reply.
+- HTTP response to Jira is an empty `200 OK` on success; errors during prompt generation or processing return appropriate `5xx` (or `4xx` for invalid auth/body).
