feat(jira): add jira_create_issue tool with convenience params and ADF auto-wrap
- New tool registered in tools/jira_issue_ops.go with executor and help\n- Supports --fields JSON or params (project, issuetype, summary, description, labels, priority, assignee, reporter, parent, update/properties/transition)\n- Returns success across 2xx and handles JSON body when present

fix(context): harden SQL for current_context type/length checks\n- Use CASE on jsonb_typeof before jsonb_array_length to avoid errors when not an array or missing

docs(plan): update .windsurf_plan.md with summary and rationale (2025-08-18)

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -746,3 +746,15 @@ Next:
 ### Chat Flow Integration (2025-08-16)
 - The webhook-generated prompt is now injected into the chat flow as a user message, then processed by the AI (Gemini) and stored as an assistant reply.
 - HTTP response to Jira is an empty `200 OK` on success; errors during prompt generation or processing return appropriate `5xx` (or `4xx` for invalid auth/body).
+
+## 2025-08-18 — Jira create issue tool and context SQL hardening
+
+- Added `jira_create_issue` tool in `tools/jira_issue_ops.go`:
+  - Supports full `--fields` JSON or convenience params (project, issuetype, summary, description, labels, priority, assignee, reporter, parent, update/properties/transition, etc.).
+  - Auto-wraps plain-text `description`/`environment` to ADF when needed.
+  - Registers executor `executeJiraCreateIssueTool` and integrates with tool registry alongside existing `jira_get_issue`, `jira_edit_issue`, and `jira_delete_issue`.
+  - Improves success handling for Jira responses across 2xx statuses.
+- Hardened SQL in `utility/context.go` for reading `metadata->'current_context'`:
+  - Safely handles non-array or missing `current_context` via CASE expression before checking length.
+
+Rationale: Enables creating Jira issues directly from the agent and prevents SQL errors when `current_context` is absent or not an array.
