Jira create issue: harden passthrough JSON and disambiguate parameters
- Validate JSON strings for passthrough fields (update, properties, historyMetadata, transition) and return a descriptive error if invalid, avoiding 400s from Jira.
- Prefer projectId over projectKey and issuetypeId over issuetypeName to avoid sending both and creating ambiguous requests.
- Updated .windsurf_plan.md to document these robustness improvements.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -754,6 +754,8 @@ Next:
   - Auto-wraps plain-text `description`/`environment` to ADF when needed.
   - Registers executor `executeJiraCreateIssueTool` and integrates with tool registry alongside existing `jira_get_issue`, `jira_edit_issue`, and `jira_delete_issue`.
   - Improves success handling for Jira responses across 2xx statuses.
+  - Robustness: Validate JSON for passthrough params (`update`, `properties`, `historyMetadata`, `transition`); if provided as strings, they must be valid JSON or we return a descriptive error to the user (avoid sending malformed strings to Jira).
+  - Disambiguation: Prefer `projectId` over `projectKey`, and `issuetypeId` over `issuetypeName`, using `if/else if` to avoid setting both fields in the request.
 - Hardened SQL in `utility/context.go` for reading `metadata->'current_context'`:
   - Safely handles non-array or missing `current_context` via CASE expression before checking length.
 
