tools/jira_issue_ops.go: Refactor jira_create_issue into helpers (parseJiraCreateIssueArgs, buildJiraCreateIssueBody) preserving behavior; validate JSON for string passthrough fields and prefer projectId/issuetypeId. Also make priority precedence explicit (priorityId over priorityName). Update .windsurf_plan.md documenting refactor.
- Add jiraCreateIssueParams struct
- Add parseJiraCreateIssueArgs(): normalize args, validate JSON for fields/update/properties/historyMetadata/transition
- Add buildJiraCreateIssueBody(): build final body with ADF wrapping, labels/priority/parent handling; enforce fields presence
- executeJiraCreateIssueTool(): orchestrate parse->build->jiraDo, unchanged error handling
- Prefer priorityId over priorityName via if/else-if for consistency
- Update plan with refactor notes

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -228,10 +228,19 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - Added `jira_transition_issue` tool to perform a transition, supporting body keys: `transition`, `fields`, `update`, `properties`, `historyMetadata` and convenience `transitionId`.
   - Registered both tools in `tools/jira_issue_ops.go` with help text and parameters.
 
+### Refactor: Jira create issue executor (2025-08-18)
+- File: `tools/jira_issue_ops.go`
+- Change: Split `executeJiraCreateIssueTool()` into smaller helpers for maintainability/testability:
+  - `parseJiraCreateIssueArgs(args)`: parses/validates `map[string]interface{}` into a dedicated params struct and validates JSON string passthrough for `update/properties/historyMetadata/transition` and `fields`.
+  - `buildJiraCreateIssueBody(params)`: builds the final Jira request body, preserving ADF wrapping, priority/labels handling, and id-vs-name/id-vs-key preferences.
+  - Main function now orchestrates parse -> build -> `jiraDo` while preserving existing behavior and error messages.
+- Result: Same functionality with clearer separation of concerns; `go build ./...` passes.
+
 ### Developer Experience Improvements
 - The tool server has been converted into a reusable package (`tools`) and is now started inside `agent.go` (as a goroutine) on `:8080`. Running `air` in the project root starts BOTH the agent and the tool server automatically.
 - No need to run a separate tool server process.
 
+{{ ... }}
 ## Next Steps (Follow-up)
 1. Encourage the agent to call `jira_get_transitions` before `jira_transition_issue` when transition id is unknown (prompt hint or chain-of-thought hinting via tool loop).
 2. Add basic unit tests for the two executors.
