tools/jira_issue_ops: DRY refactor + readability
- Centralized string-based convenience params parsing via stringParams map+loop in parseJiraCreateIssueArgs
- DRY handling of optional JSON-capable keys (update, properties, historyMetadata, transition) via loop with validation
- Expanded label parsing loops to multi-line for readability
- Preserved id-over-name and id-over-key preferences; JSON validation unchanged

Also updated .windsurf_plan.md to document the refactor and readability changes.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -235,6 +235,7 @@ Add Jira tools for transitioning issues: list available transitions and perform 
   - `buildJiraCreateIssueBody(params)`: builds the final Jira request body, preserving ADF wrapping, priority/labels handling, and id-vs-name/id-vs-key preferences.
   - Main function now orchestrates parse -> build -> `jiraDo` while preserving existing behavior and error messages.
 - Result: Same functionality with clearer separation of concerns; `go build ./...` passes.
+  - DRY improvements: centralized string-based convenience params parsing via a `stringParams` map+loop; consolidated optional top-level JSON-capable keys (`update`, `properties`, `historyMetadata`, `transition`) handling via a loop over pointers with validation. Expanded label parsing loops to multi-line for readability. Build verified.
 
 ### Developer Experience Improvements
 - The tool server has been converted into a reusable package (`tools`) and is now started inside `agent.go` (as a goroutine) on `:8080`. Running `air` in the project root starts BOTH the agent and the tool server automatically.
