--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -237,6 +237,11 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - Result: Same functionality with clearer separation of concerns; `go build ./...` passes.
   - DRY improvements: centralized string-based convenience params parsing via a `stringParams` map+loop; consolidated optional top-level JSON-capable keys (`update`, `properties`, `historyMetadata`, `transition`) handling via a loop over pointers with validation. Expanded label parsing loops to multi-line for readability. Build verified.
 
+#### Follow-up hardening (2025-08-18)
+- Nil-guard for `fields` parsing in `parseJiraCreateIssueArgs` so a JSON `null` or nil map does not overwrite the initialized map and cause panics during body construction.
+- Replaced mutating `handleADFField` helper with pure `processADFValue(raw) (interface{}, bool)` and updated `buildJiraCreateIssueBody` to set `environment` and `description` via the returned value.
+- Benefit: safer map handling and improved reusability/testability of ADF logic. Build verified with `go build ./...`.
+
 ### Developer Experience Improvements
 - The tool server has been converted into a reusable package (`tools`) and is now started inside `agent.go` (as a goroutine) on `:8080`. Running `air` in the project root starts BOTH the agent and the tool server automatically.
 - No need to run a separate tool server process.
