--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -16,6 +16,7 @@
 - Added debug logging for exit condition.
 - Confirmed resolution of hanging issue with 'air' after adding terminal check and debug logging.
 - UI: Added Account dropdown in the header and moved "Log out" into it. Files updated: `web/src/App.tsx`, `web/src/app.css`.
+ - Refactor (2025-08-18): DRYed Jira create-issue labels parsing in `tools/jira_issue_ops.go` by introducing a local `addLabel` helper inside `buildJiraCreateIssueBody()` to trim and append non-empty labels from `[]interface{}`, `[]string`, or comma-separated `string`. Behavior preserved.
 
 ## Next Steps
 1. Enhance `agent.go` chat interface for better tool integration.
