Jira: add project management tools (+ registration); update plan
Implement project ops tools using existing jiraDo() helper: list/search/recent/get/create/update/delete/archive/restore/statuses (+ async delete returns Location). Register tools with help/parameters and consistent error handling. Update .windsurf_plan.md with details, behavior, and next steps. Build verified via go build ./....

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -777,3 +777,33 @@ Next:
   - Safely handles non-array or missing `current_context` via CASE expression before checking length.
 
 Rationale: Enables creating Jira issues directly from the agent and prevents SQL errors when `current_context` is absent or not an array.
+
+## 2025-08-19 — Jira project management tools
+
+- New file: `tools/jira_project_ops.go` implementing project operations aligned with existing Jira issue tools and `jiraDo()` helper.
+- Registered tools (in `init()`):
+  - `jira_projects_all` → GET `/rest/api/3/project` (deprecated by Jira; prefer search). Params: `expand`, `recent`, `properties`.
+  - `jira_projects_recent` → GET `/rest/api/3/project/recent`. Params: `expand`, `properties`.
+  - `jira_projects_search` → GET `/rest/api/3/project/search`. Params: `startAt`, `maxResults`, `orderBy`, `id`, `keys`, `query`, `typeKey`, `categoryId`, `action`, `expand`.
+  - `jira_get_project` → GET `/rest/api/3/project/{projectIdOrKey}`. Params: `projectIdOrKey`, `expand`, `properties`.
+  - `jira_create_project` → POST `/rest/api/3/project`. Body passthrough; helper docs list common fields (`key`, `name`, `projectTypeKey`, `projectTemplateKey`, `leadAccountId`, etc.).
+  - `jira_update_project` → PUT `/rest/api/3/project/{projectIdOrKey}`. Supports common fields (`name`, `key`, `leadAccountId`, `assigneeType`, `avatarId`, `categoryId`, `description`, `issueSecurityScheme`, `notificationScheme`, `permissionScheme`, `url`).
+  - `jira_delete_project` → DELETE `/rest/api/3/project/{projectIdOrKey}`. Param: `enableUndo`.
+  - `jira_delete_project_async` → POST `/rest/api/3/project/{projectIdOrKey}/delete`. Returns task payload and `Location` header when present.
+  - `jira_archive_project` → POST `/rest/api/3/project/{projectIdOrKey}/archive`.
+  - `jira_restore_project` → POST `/rest/api/3/project/{projectIdOrKey}/restore`.
+  - `jira_get_project_statuses` → GET `/rest/api/3/project/{projectIdOrKey}/statuses`.
+
+- Behavior & consistency:
+  - Uses existing config (`JIRA_URL`, `JIRA_TOKEN`, `JIRA_EMAIL`) and `jiraDo()` for auth and logging.
+  - Uniform arg parsing, query construction, robust 2xx handling, and JSON unmarshalling consistent with `tools/jira_issue_ops.go`.
+  - Clear errors for missing `projectIdOrKey`, 401, 404, and non-2xx statuses.
+
+- Fixes:
+  - Resolved a build error in the Help string for `jira_create_project` tool (mismatched delimiter) and verified `go build ./...` passes.
+
+- Next steps:
+  - Add end-to-end tests against a Jira Cloud sandbox for each operation.
+  - Consider surfacing minimal convenience flags for `jira_create_project` (e.g., `--key`, `--name`) while retaining full body passthrough.
+  - Add rate-limit/backoff handling across Jira tools if needed.
+
