--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -17,8 +17,9 @@
 - Confirmed resolution of hanging issue with 'air' after adding terminal check and debug logging.
 - UI: Added Account dropdown in the header and moved "Log out" into it. Files updated: `web/src/App.tsx`, `web/src/app.css`.
  - Refactor (2025-08-18): DRYed Jira create-issue labels parsing in `tools/jira_issue_ops.go` by introducing a local `addLabel` helper inside `buildJiraCreateIssueBody()` to trim and append non-empty labels from `[]interface{}`, `[]string`, or comma-separated `string`. Behavior preserved.
- - Behavior Alignment (2025-08-18): Updated `buildJiraCreateIssueBody()` so user-provided `fields` take precedence over convenience params. Convenience params now apply only when the corresponding key (e.g., `project`, `issuetype`, `summary`, `description`, `labels`, `priority`, `assignee`, `reporter`, `parent`) is absent in `fields`.
+- Behavior Alignment (2025-08-18): Updated `buildJiraCreateIssueBody()` so user-provided `fields` take precedence over convenience params. Convenience params now apply only when the corresponding key (e.g., `project`, `issuetype`, `summary`, `description`, `labels`, `priority`, `assignee`, `reporter`, `parent`) is absent in `fields`.
 - Documented: jira_create_issue now respects --fields precedence over convenience params.
+ - Small DRY refactor (2025-08-19): Introduced `setQueryFromInt(...)` in `tools/jira_project_ops.go` and replaced repeated int/float64 parsing for `recent`, `startAt`, `maxResults`, and `categoryId` query params. Build passes.
 
 ## Next Steps
 1. Enhance `agent.go` chat interface for better tool integration.
