docs(plan): log Jira project tools 401 handling consistency update (2025-08-19)
- Note explicit http.StatusUnauthorized handling in:
  - executeJiraProjectsSearchTool
  - executeJiraGetProjectTool
- Reason: clearer, consistent error messages across Jira project tools.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -29,6 +29,10 @@
     - `executeJiraRestoreProjectTool`
     - `executeJiraGetProjectStatusesTool`
     Result: reduced duplication and centralized validation. `go build ./...` passes.
+  - Consistency (2025-08-19): Added explicit `http.StatusUnauthorized` handling in `tools/jira_project_ops.go` for:
+    - `executeJiraProjectsSearchTool` (returns "unauthorized" on 401)
+    - `executeJiraGetProjectTool` (401 handling alongside existing 404 check)
+    Reason: clearer, consistent error messages across Jira project tools. Build verified.
 
 ## Next Steps
 1. Enhance `agent.go` chat interface for better tool integration.
