docs: update .windsurf_plan.md with Jira comments ADF refactor\n\nDocumented centralization of ADF handling in jira_add_comment and jira_update_comment using processADFValue for consistency and reduced duplication.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -50,6 +50,8 @@
 - Registered tools in `init()` so they appear in `/api/tools` dynamically.
 - Build verified with `go build ./...`.
 
+- Refactor (2025-08-19): Centralized ADF handling for comment bodies by using `processADFValue` in both `jira_add_comment` and `jira_update_comment`. This adds support for string-encoded JSON, reduces duplication, and keeps behavior consistent across add/update paths. Build verified.
+
 ## Next Steps
 1. Enhance `agent.go` chat interface for better tool integration.
 2. Test the write_file functionality.
