--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -52,6 +52,9 @@
 
 - Refactor (2025-08-19): Centralized ADF handling for comment bodies by using `processADFValue` in both `jira_add_comment` and `jira_update_comment`. This adds support for string-encoded JSON, reduces duplication, and keeps behavior consistent across add/update paths. Build verified.
 
+- Usability fix (2025-08-19): `jira_get_comments_by_ids` now accepts comma-separated IDs for CLI `/tool` usage (e.g., `--ids 10000,10001`) and still supports native arrays for API clients. Help text updated accordingly.
+- Diagnostics (2025-08-19): Added shared Jira error parsing helper to extract `errorMessages` and field-level `errors`. Applied to `jira_add_comment`, `jira_update_comment`, and `jira_delete_comment` so all write ops surface detailed error messages consistently.
+
 ## Next Steps
 1. Enhance `agent.go` chat interface for better tool integration.
 2. Test the write_file functionality.
