tools(jira): guard int64->int overflow in ids parsing; update plan\n\n- Add overflow check when converting json.Number to int in jira_get_comments_by_ids\n- Update .windsurf_plan.md with safety note\n\nBuild passes.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -54,6 +54,7 @@
 
 - Usability fix (2025-08-19): `jira_get_comments_by_ids` now accepts comma-separated IDs for CLI `/tool` usage (e.g., `--ids 10000,10001`) and still supports native arrays for API clients. Help text updated accordingly.
 - Diagnostics (2025-08-19): Added shared Jira error parsing helper to extract `errorMessages` and field-level `errors`. Applied to `jira_add_comment`, `jira_update_comment`, and `jira_delete_comment` so all write ops surface detailed error messages consistently.
+- Safety (2025-08-19): Guarded against `int64`→`int` overflow in `jira_get_comments_by_ids` ID parsing to avoid incorrect IDs on 32-bit systems.
 
 ## Next Steps
 1. Enhance `agent.go` chat interface for better tool integration.
