feat(jira): add issue comments tools and ADF wrapping for update (#19)
* feat(jira): add issue comments tools and ADF wrapping for update

- Implement tools in tools/jira_issue_comments.go:
  - jira_get_comments_by_ids (POST /rest/api/3/comment/list)
  - jira_list_comments (GET /rest/api/3/issue/{issueIdOrKey}/comment)
  - jira_add_comment (POST /rest/api/3/issue/{issueIdOrKey}/comment)
  - jira_get_comment (GET /rest/api/3/issue/{issueIdOrKey}/comment/{id})
  - jira_update_comment (PUT /rest/api/3/issue/{issueIdOrKey}/comment/{id})
  - jira_delete_comment (DELETE /rest/api/3/issue/{issueIdOrKey}/comment/{id})
- Wrap plain string bodies into minimal ADF for add and update to avoid Jira v3 400s
- Register executors via init() so tools are auto-discovered
- Update .windsurf_plan.md documenting behavior and usage

Relates-to: GTHING-28

* tools: jira comments update uses processADFValue for ADF handling\n\nRefactor executeJiraUpdateCommentTool in tools/jira_issue_comments.go to use existing processADFValue helper instead of duplicating ADF wrapping logic. This centralizes ADF handling, supports string-encoded JSON, and reduces duplication with add comment implementation. Build passes.

* tools: use processADFValue in jira_add_comment for consistent ADF handling\n\nRefactor executeJiraAddCommentTool to use processADFValue for the body, matching update path. This centralizes ADF handling, supports string-encoded JSON, and removes duplication. Build passes.

* docs: update .windsurf_plan.md with Jira comments ADF refactor\n\nDocumented centralization of ADF handling in jira_add_comment and jira_update_comment using processADFValue for consistency and reduced duplication.

* tools: improve jira_get_comments_by_ids CLI usability; unify Jira error details\n\n- Parse ids from comma-separated strings (CLI) and arrays (API)\n- Update Help text to show working example\n- Add shared jiraErrorDetailFromBody and apply to add/update/delete comment tools for consistent diagnostics\n-

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -34,6 +34,28 @@
     - `executeJiraGetProjectTool` (401 handling alongside existing 404 check)
     Reason: clearer, consistent error messages across Jira project tools. Build verified.
 
+### Jira Issue Comments Tools (2025-08-19)
+- Implemented full comment management in `tools/jira_issue_comments.go`:
+  - `jira_get_comments_by_ids` → POST `/rest/api/3/comment/list`
+  - `jira_list_comments` → GET `/rest/api/3/issue/{issueIdOrKey}/comment`
+  - `jira_add_comment` → POST `/rest/api/3/issue/{issueIdOrKey}/comment`
+  - `jira_get_comment` → GET `/rest/api/3/issue/{issueIdOrKey}/comment/{id}`
+  - `jira_update_comment` → PUT `/rest/api/3/issue/{issueIdOrKey}/comment/{id}`
+  - `jira_delete_comment` → DELETE `/rest/api/3/issue/{issueIdOrKey}/comment/{id}`
+- Behavior & robustness:
+  - Accepts `--issueIdOrKey` (alias: `--issue`).
+  - `jira_add_comment` and `jira_update_comment` wrap plain string bodies into minimal Atlassian Document Format (ADF) to avoid 400 errors on Jira Cloud v3.
+  - Parses numeric comment IDs from mixed types (float64/int/string/json.Number) for `jira_get_comments_by_ids`.
+  - Returns parsed JSON objects and propagates Jira error messages where available for better diagnostics.
+- Registered tools in `init()` so they appear in `/api/tools` dynamically.
+- Build verified with `go build ./...`.
+
+- Refactor (2025-08-19): Centralized ADF handling for comment bodies by using `processADFValue` in both `jira_add_comment` and `jira_update_comment`. This adds support for string-encoded JSON, reduces duplication, and keeps behavior consistent across add/update paths. Build verified.
+
+- Usability fix (2025-08-19): `jira_get_comments_by_ids` now accepts comma-separated IDs for CLI `/tool` usage (e.g., `--ids 10000,10001`) and still supports native arrays for API clients. Help text updated accordingly.
+- Diagnostics (2025-08-19): Added shared Jira error parsing helper to extract `errorMessages` and field-level `errors`. Applied to `jira_add_comment`, `jira_update_comment`, and `jira_delete_comment` so all write ops surface detailed error messages consistently.
+- Safety (2025-08-19): Guarded against `int64`→`int` overflow in `jira_get_comments_by_ids` ID parsing to avoid incorrect IDs on 32-bit systems.
+
 ## Next Steps
 1. Enhance `agent.go` chat interface for better tool integration.
 2. Test the write_file functionality.
